// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CitySelector snapshot > CitySelector demo snapshot 0 1`] = `
<div
  className="bui-city-selector"
  style={
    {
      "height": "500px",
    }
  }
>
  <div
    className="bui-scroll bui-scroll-view-scroll-y bui-city-selector-scroll-view-container tph"
    onScroll={[Function]}
    onTouchMove={[Function]}
    style={{}}
  >
    <div
      className="bui-city-selector-all-city"
    >
      <div>
        <div
          className="select-city-title"
          id="CRRT"
        >
          当前城市
        </div>
        <div
          className="select-city-buttons"
        >
          <span
            className="bui-city-selector-item"
            onClick={[Function]}
          >
            北京
          </span>
        </div>
      </div>
      <div>
        <div
          className="select-city-title"
          id="GPS"
        >
          定位城市
        </div>
        <div
          className="select-city-buttons"
        >
          <span
            className="bui-city-selector-item"
            onClick={[Function]}
          >
            上海
          </span>
        </div>
      </div>
      <div>
        <div
          className="select-city-title"
          id="HOT"
        >
          热门城市
        </div>
        <div
          className="select-city-buttons"
        >
          <span
            className="bui-city-selector-item"
            onClick={[Function]}
          >
            北京
          </span>
          <span
            className="bui-city-selector-item"
            onClick={[Function]}
          >
            上海
          </span>
          <span
            className="bui-city-selector-item"
            onClick={[Function]}
          >
            广州
          </span>
        </div>
      </div>
      <div
        className="bui-city-selector-list-container"
      >
        <div>
          <div
            className="select-city-title"
            id="A"
          >
            A
          </div>
          <ul
            className="bui-city-selector-list"
          >
            <li
              className="bui-city-selector-list-item"
              onClick={[Function]}
            >
              安康
            </li>
            <li
              className="bui-city-selector-list-item"
              onClick={[Function]}
            >
              鞍山
            </li>
          </ul>
        </div>
        <div>
          <div
            className="select-city-title"
            id="B"
          >
            B
          </div>
          <ul
            className="bui-city-selector-list"
          >
            <li
              className="bui-city-selector-list-item"
              onClick={[Function]}
            >
              巴音郭楞
            </li>
            <li
              className="bui-city-selector-list-item"
              onClick={[Function]}
            >
              巴中
            </li>
          </ul>
        </div>
        <div>
          <div
            className="select-city-title"
            id="C"
          >
            C
          </div>
          <ul
            className="bui-city-selector-list"
          >
            <li
              className="bui-city-selector-list-item"
              onClick={[Function]}
            >
              沧州
            </li>
            <li
              className="bui-city-selector-list-item"
              onClick={[Function]}
            >
              长春
            </li>
          </ul>
        </div>
        <div>
          <div
            className="select-city-title"
            id="D"
          >
            D
          </div>
          <ul
            className="bui-city-selector-list"
          >
            <li
              className="bui-city-selector-list-item"
              onClick={[Function]}
            >
              大理
            </li>
            <li
              className="bui-city-selector-list-item"
              onClick={[Function]}
            >
              大连
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CitySelector snapshot > CitySelector demo snapshot 0 2`] = `
<div
  className="bui-city-selector"
  style={
    {
      "height": "500px",
    }
  }
>
  <div
    className="bui-city-selector-title"
  >
    选择城市
    <div
      className="bui-city-selector-btn-close"
      onClick={[Function]}
    >
      ✕
    </div>
  </div>
  <div
    className="bui-scroll bui-scroll-view-scroll-y bui-city-selector-scroll-view-container tph container-has-title"
    onScroll={[Function]}
    onTouchMove={[Function]}
    style={{}}
  >
    <div
      className="bui-city-selector-all-city"
    >
      <div>
        <div
          className="select-city-title"
          id=""
        >
          当前城市
        </div>
        <div
          className="select-city-buttons"
        >
          <span
            className="bui-city-selector-item"
            onClick={[Function]}
          >
            北京
          </span>
        </div>
      </div>
      <div>
        <div
          className="select-city-title"
          id=""
        >
          定位城市
        </div>
        <div
          className="select-city-buttons"
        >
          <span
            className="bui-city-selector-item"
            onClick={[Function]}
          >
            上海
          </span>
        </div>
      </div>
      <div>
        <div
          className="select-city-title"
          id=""
        >
          热门城市
        </div>
        <div
          className="select-city-buttons"
        >
          <span
            className="bui-city-selector-item"
            onClick={[Function]}
          >
            北京
          </span>
          <span
            className="bui-city-selector-item"
            onClick={[Function]}
          >
            上海
          </span>
          <span
            className="bui-city-selector-item"
            onClick={[Function]}
          >
            广州
          </span>
        </div>
      </div>
      <div
        className="bui-city-selector-list-container"
      >
        <div>
          <div
            className="select-city-title"
            id=""
          >
            A
          </div>
          <ul
            className="bui-city-selector-list"
          >
            <li
              className="bui-city-selector-list-item"
              onClick={[Function]}
            >
              安康
            </li>
            <li
              className="bui-city-selector-list-item"
              onClick={[Function]}
            >
              鞍山
            </li>
          </ul>
        </div>
        <div>
          <div
            className="select-city-title"
            id=""
          >
            B
          </div>
          <ul
            className="bui-city-selector-list"
          >
            <li
              className="bui-city-selector-list-item"
              onClick={[Function]}
            >
              巴音郭楞
            </li>
            <li
              className="bui-city-selector-list-item"
              onClick={[Function]}
            >
              巴中
            </li>
          </ul>
        </div>
        <div>
          <div
            className="select-city-title"
            id=""
          >
            C
          </div>
          <ul
            className="bui-city-selector-list"
          >
            <li
              className="bui-city-selector-list-item"
              onClick={[Function]}
            >
              沧州
            </li>
            <li
              className="bui-city-selector-list-item"
              onClick={[Function]}
            >
              长春
            </li>
          </ul>
        </div>
        <div>
          <div
            className="select-city-title"
            id=""
          >
            D
          </div>
          <ul
            className="bui-city-selector-list"
          >
            <li
              className="bui-city-selector-list-item"
              onClick={[Function]}
            >
              大理
            </li>
            <li
              className="bui-city-selector-list-item"
              onClick={[Function]}
            >
              大连
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CitySelector snapshot > CitySelector demo snapshot 0 3`] = `
<div
  className="bui-city-selector"
  style={
    {
      "height": "500px",
    }
  }
>
  <div
    className="bui-scroll bui-scroll-view-scroll-y bui-city-selector-scroll-view-container tph"
    onScroll={[Function]}
    onTouchMove={[Function]}
    style={{}}
  >
    <div
      className="bui-city-selector-all-city"
    >
      <div>
        <div
          className="select-city-title"
          id=""
        >
          当前城市
        </div>
        <div
          className="select-city-buttons"
        >
          <span
            className="bui-city-selector-item"
            onClick={[Function]}
          >
            北京
          </span>
        </div>
      </div>
      <div>
        <div
          className="select-city-title"
          id=""
        >
          定位城市
        </div>
        <div
          className="select-city-buttons"
        >
          <span
            className="bui-city-selector-item"
            onClick={[Function]}
          >
            上海
          </span>
        </div>
      </div>
      <div>
        <div
          className="select-city-title"
          id=""
        >
          热门城市
        </div>
        <div
          className="select-city-buttons"
        >
          <span
            className="bui-city-selector-item"
            onClick={[Function]}
          >
            北京
          </span>
          <span
            className="bui-city-selector-item"
            onClick={[Function]}
          >
            上海
          </span>
          <span
            className="bui-city-selector-item"
            onClick={[Function]}
          >
            广州
          </span>
        </div>
      </div>
      <div
        className="bui-city-selector-list-container"
      >
        <div>
          <div
            className="select-city-title"
            id=""
          >
            A
          </div>
          <ul
            className="bui-city-selector-list"
          >
            <li
              className="bui-city-selector-list-item"
              onClick={[Function]}
            >
              安康
            </li>
            <li
              className="bui-city-selector-list-item"
              onClick={[Function]}
            >
              鞍山
            </li>
          </ul>
        </div>
        <div>
          <div
            className="select-city-title"
            id=""
          >
            B
          </div>
          <ul
            className="bui-city-selector-list"
          >
            <li
              className="bui-city-selector-list-item"
              onClick={[Function]}
            >
              巴音郭楞
            </li>
            <li
              className="bui-city-selector-list-item"
              onClick={[Function]}
            >
              巴中
            </li>
          </ul>
        </div>
        <div>
          <div
            className="select-city-title"
            id=""
          >
            C
          </div>
          <ul
            className="bui-city-selector-list"
          >
            <li
              className="bui-city-selector-list-item"
              onClick={[Function]}
            >
              沧州
            </li>
            <li
              className="bui-city-selector-list-item"
              onClick={[Function]}
            >
              长春
            </li>
          </ul>
        </div>
        <div>
          <div
            className="select-city-title"
            id=""
          >
            D
          </div>
          <ul
            className="bui-city-selector-list"
          >
            <li
              className="bui-city-selector-list-item"
              onClick={[Function]}
            >
              大理
            </li>
            <li
              className="bui-city-selector-list-item"
              onClick={[Function]}
            >
              大连
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
